added windows support; started wave implementation